#43: Implement 'Dctor' factories.